[package]
name = "laundry-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing", "ws", "macros"] }
axum-streams = { version = "0.9.1", features = ["json"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-util = "0.3.28"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
sha3 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
